--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Audio Trimmer Pro</title>
+    <title>Video Audio Trimmer</title>
     <style>
         * { 
             margin: 0; 
@@ -413,8 +413,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎵 Video Audio Trimmer Pro</h1>
-            <p>Extract, trim, and download audio from any video - 100% client-side processing</p>
+            <h1>🎵 Video Audio Trimmer</h1>
+            <p>Extract, trim and download audio from any video.</p>
         </div>
         
         <div class="main">
