--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
             <!-- ADD FOOTER HERE -->
         <footer class="footer">
             <div class="footer-content">
-                <p>&copy; <span id="year"></span> Video Audio Trimmer. Made by <strong>akash</strong> with ❤️</p>
+                <p>&copy; <span id="year"></span> Video Audio Trimmer. <strong>мα∂є вy αкαsн【ツ】</div>
+        </p>
                 <p style="font-size: 0.85em; opacity: 0.7;">100% Client-side • No data collected</p>
             </div>
         </footer>
