--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-    background: linear-gradient(135deg, #0f172a 0%, #020617 100%);
+    background: linear-gradient(135deg, #f8fafc 0%, #e5e7eb 100%);
     min-height: 100vh;
     padding: 20px;
 }
